syntax = "proto3";

option go_package = "github.com/lcnascimento/istio-knative-poc/segments-service/application/grpc/proto";

package grpc;

service SegmentsService {
  rpc GetSegmentUsers (GetSegmentUsersRequest) returns (stream GetSegmentUsersResponse) {}
}

// The request message containing the user's name.
message GetSegmentUsersRequest {
  int32  segment_id  = 1;
  int32  size        = 2;
}

// The response message containing the greetings
message GetSegmentUsersResponse {
  repeated User data = 1;

  int32  total = 2;
}

message User {
	string  id        = 1;
	string  app_key   = 2;
	string  reference = 3;
	string  name      = 4;
	string  email     = 5;
	string  gender    = 6;
}
